--- a/src/components/home/writings.astro
+++ b/src/components/home/writings.astro
@@ -2,18 +2,17 @@
 import Button from "../button.astro";
 import PostsLoop from "../posts-loop.astro";
 
-const feed = "https://feed.miantiao.me/";
+const feed = "https://feed.6888866.xyz";
 ---
 
 <section class="max-w-4xl mx-auto px-7 lg:px-0">
   <h2
     class="text-2xl font-bold leading-10 tracking-tight text-neutral-900 dark:text-neutral-100"
   >
-    My Writings
+    我的写作
   </h2>
   <p class="mb-6 text-base text-neutral-600 dark:text-neutral-400">
-    Along with coding I also like to write about life and technology. Here are
-    some of my recent posts.
+    一些碎碎念...
   </p>
 
   <div class="w-full max-w-4xl mx-auto my-7 xl:px-0">
@@ -24,7 +23,7 @@ const feed = "https://feed.miantiao.me/";
         <PostsLoop count="3" />
 
         <div class="flex items-center justify-center w-full py-5">
-          <Button text="View All My Writing" link="/posts" />
+          <Button text="查看全部写作" link="/posts" />
         </div>
       </div>
       <div class="w-full mt-10 md:w-1/3 md:mt-0">
@@ -50,7 +49,7 @@ const feed = "https://feed.miantiao.me/";
             <h2
               class="flex text-sm font-semibold text-neutral-900 dark:text-neutral-100"
             >
-              Subscribe my blog
+              订阅我的博客
             </h2>
           </div>
           <p class="mt-2 text-sm text-neutral-600 dark:text-neutral-400">
@@ -77,7 +76,7 @@ const feed = "https://feed.miantiao.me/";
             <button
               type="submit"
               class="block w-full px-4 py-2 mt-5 text-xs font-semibold text-center duration-300 ease-out border rounded bg-neutral-900 dark:bg-neutral-100 dark:hover:border-neutral-300 dark:text-neutral-800 dark:hover:bg-neutral-950 dark:hover:text-neutral-100 text-neutral-100 border-neutral-900 hover:bg-white hover:text-neutral-900"
-              >Subscribe</button
+              >订阅</button
             >
           </div>
         </form>
