--- a/src/components/footer.astro
+++ b/src/components/footer.astro
@@ -20,7 +20,7 @@ import Logo from "../components/logo.astro";
 
       
       <a
-        href="https://github.com/muzihuaner"
+        href="https://github.com/6888866Lab"
         target="_blank"
         class="text-neutral-500 dark:text-neutral-400 hover:text-neutral-900 dark:hover:text-white"
       >
